Information about me section has been added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
         <title> About Me </title>
     </head>
     <body>
-        <p>
-            <strong> Information About Me </strong>
-        </p>
+        <h1> <strong> Information About Me </strong> </h1>
+            <h2> <em> Personal Introduction </em> </h2>
+            <p> Sudenur Meral</p>
+            <p> 150230304 </p>
+            <p> photo </p>
+            <p> My name is Sudenur, and I am 19 years old. I live in Balıkesir and am currently a student at Istanbul Technical University, where I am pursuing a degree in Artificial Intelligence and Data Engineering. This is my third semester at ITU. My hobbies include reading books, watching movies, writing, and conducting research.</p>
+            <h2> <em> Academic Interests </em> </h2>
+            <p> I am deeply interested in artificial intelligence and data, which motivated my choice of this department. I am especially captivated by the applications of artificial intelligence within the healthcare field. Furthermore, I find great satisfaction in performing mathematical calculations and interpreting graphics on various subjects. My strengths predominantly lie in mathematics and biology. </p>
     </body>
 </html>
