email address was added.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <body>
         <h1> <strong> Information About Me </strong> </h1>
             <h2> <em> Personal Introduction </em> </h2>
-            <p> Sudenur Meral</p>
-            <p> 150230304 </p>
+            <p> 
+                Sudenur Meral
+                <br>
+                150230304
+                <br>
+                <a href="mailto:meral23@itu.edu.tr"> meral23@itu.edu.tr </a>
+            </p>
             <p> <img src="myphoto.jpg" height="200"> </p>
             <p> My name is Sudenur, and I am 19 years old. I live in Balıkesir and am currently a student at Istanbul Technical University, where I am pursuing a degree in Artificial Intelligence and Data Engineering. This is my third semester at ITU. My hobbies include reading books, watching movies, writing, and conducting research.</p>
             <h2> <em> Academic Interests </em> </h2>
