--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title> About Me </title>
+        <link rel = "stylesheet" type = "text/css" href = "style.css" />
     </head>
     <body>
         <h1> <strong> Information About Me </strong> </h1>
