--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
             <p class="paragraph3"> My name is Sudenur, and I am 19 years old. I live in Balıkesir and am currently a student at Istanbul Technical University, where I am pursuing a degree in Artificial Intelligence and Data Engineering. This is my third semester at ITU. My hobbies include reading books, watching movies, writing, and conducting research.</p>  
             <h2> <em> Academic Interests </em> </h2>
             <p class="paragraph4"> I am deeply interested in artificial intelligence and data, which motivated my choice of this department. I am especially captivated by the applications of artificial intelligence within the healthcare field. Furthermore, I find great satisfaction in performing mathematical calculations and interpreting graphics on various subjects. My strengths predominantly lie in mathematics and biology. </p>
+            <pre>
+Let's Play The Game!         
+         Please press the button.
+<span class="arrow">&#8595;</span>
+            </pre>
     </body>
 </html> 
