game.js and game.css link were added

--- a/game.html
+++ b/game.html
@@ -2,8 +2,19 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title> Game </title>
+        <title> Word Prediction Game </title>
+        <link rel="stylesheet" href="game.css">
     </head>
     <body>
+        <h1>Word Prediction Game</h1>
+    <div id="game-container">
+        <div id="word-display">_ _ _ _ _</div>
+        <input type="text" id="guess-input" placeholder="Guess a letter or word">
+        <button id="submit-button">Submit</button>
+        <p>Score: <span id="score">0</span></p>
+        <p>Lives: <span id="lives">3</span></p>
+        <button id="reset-button">Reset Game</button>
+    </div>
+    <script src="game.js"></script>
     </body>
 </html>
