some changes in game files for images

--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Word Prediction Game</h1>
     <div id="game-container">
-        <div id="word-display">_ _ _ _ _</div>
+        <div id="word-display"></div>
         <input type="text" id="guess-input" placeholder="Guess a letter or word">
         <button id="submit-button">Submit</button>
         <p>Score: <span id="score">0</span></p>
