div elements were added and style was changed

--- a/game.html
+++ b/game.html
@@ -9,7 +9,10 @@
         <h1>Word Prediction Game</h1>
         <div id="game-container">
             <div id="word-display"></div>
-            <input type="text" id="guess-input" placeholder="Guess a letter or word">
+            <div id="input-container">
+                <span id="input-label">Prediction:</span>
+                <input type="text" id="guess-input" placeholder="a letter or word">
+            </div>
             <div id="score-lives-container">
                 <p>Score: <span id="score">0</span></p>
                 <p>Lives: <span id="lives"></span></p>
