The page style has been changed, and it has now been created with a brown color theme.

--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
                 <p>Lives: <span id="lives"></span></p>
             </div>
             <button id="submit-button">Submit</button>
-            <button id="reset-button">Reset Game</button>
+            <button id="reset-button">Reset the Game</button>
         </div>
     <script src="game.js"></script>
     </body>
